# Quantum-Docking

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  full.adjlist  hyperopt.ipynb  import_pharmacophores.py  new_opt.ipynb  pyproject.toml  requirements.txt  script_ph.py  small.adjlist
.github/workflows/: pylint.yml
config/: .pylintrc
data/: contact_potential_function.pkl
data/instances/: TACE_AS.graphml
data/ligands/: 283_ideal.sdf  283_model.sdf  TAXOL.sdf  convert_out.sdf
data/models/v1/: fall_time.model  final_detuning.model  init_detuning.model  omega.model  rise_time.model
data/models/v2/: fall_time.model  final_detuning.model  init_detuning.model  omega.model  rise_time.model
data/pharmacophores/TACE-AS/: ligand.pma  receptor.pma
data/registers/3/: 3_basic.json  3_triangle.json
data/registers/4/: 4_2_mis.json  4_2_spaced.json  4_square.json
data/registers/6/: 6_triangle.json  6_triangle_close.json
data/registers/7/: 7_circle.json  7_square_missing.json
data/registers/8/: 8_circle.json  8_half_circle.json  8_half_square.json  8_square_extra.json
generated_graphs/: compl_105.graphml  compl_112.graphml  compl_133.graphml  compl_189.graphml  compl_238.graphml  compl_28.graphml  compl_280.graphml  compl_343.graphml  compl_35.graphml  compl_413.graphml  compl_42.graphml  compl_497.graphml  compl_7.graphml  compl_70.graphml  compl_84.graphml
generated_graphs_surface/: compl_surface_161.graphml  compl_surface_196.graphml  compl_surface_21.graphml  compl_surface_259.graphml  compl_surface_329.graphml  compl_surface_448.graphml  compl_surface_77.graphml
notebooks/: Tutorial_QAOA_gate_based.ipynb  Tutorial_VQAA.ipynb  Tutorial_VQAA_complex_and_simple_sequence.ipynb  Variational_adiabatic.ipynb  demo.ipynb  embedding_as_an_optimization_process.ipynb  ml.ipynb  qaa_MIS.ipynb  rdkit.ipynb  results.ipynb  test_module_quantum_solution.ipynb  tests_5_and_8_atoms.ipynb
notebooks/tests/: embedding_as_an_optimization_process.ipynb  runtime_test.ipynb  tests_5_and_8_atoms.ipynb
notebooks/tutorials/: Tutorial_VQAA_complex_and_simple_sequence.ipynb
pymol/: base_TACEAS.pse  docking_v1.pse
src/: config.py  main.py  molecules.py
src/config/: general.py  potentials.py  pulser.py
src/draw/: features.py  graph.py  mol.py
src/graph/: draw.py  interaction_graph.py  mapping.py  utils.py
src/mol/: features.py  interaction_graph.py  mol.py
src/mol_processing/: features.py  indexing.py  interaction_graph.py  mol.py  postprocessing.py  surface.py
src/mol_to_graph/: mol.py
src/solver/: classical.py  opt_vqaa.py  quantum.py  quantum_gate_based.py  weighted_mis.py
src/utils/: dataclasses.py  distances.py
(+1278 files in other folders)
