[project]
name = "quantum-docking"
version = "0.0.1"
authors = [{ name="Noé Bosc-Haddad", email="noe.bosc.haddad@gmail.com"}, {name="Mathieu Garrigues", email="mathieu.garigues@gmail.com"}, {name="Victor Onofre", email="vonofre68@gmail.com"},]
description = "As part of the Blaise Pascal's [Re]Generative Quantum Challenge, we attempt to use neutral atoms to speed up molecular docking."
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",]

[project.urls]
"Homepage" = "https://pasqal-quantum-challenge-platform.bemyapp.com/#/projects/6508735070156e9993122511"

#================================================================

[tool.black]
line-length = 100

[tool.pycln]
all = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 100
